# mcp-server-cantera

./: LICENSE  MANIFEST.in  README.md  plot_fe_air_combustion.py  plot_flame_temp_vs_phi.py  pyproject.toml  test_air_transport.py  test_flame_temp.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  log-traffic.yml
examples/: 01_thermodynamic_transport_properties.md  02_specific_heat_vs_temperature.md  03_methane_air_combustion.md  04_batch_reactor_ignition.md
scripts/: fe_air_parametric_study.py  plot_fe_air_combustion.py  plot_flame_temp_vs_phi.py  plot_h2_air_batch_reactor.py  plot_methane_air_combustion.py  test_air_transport.py  test_flame_temp.py
src/mcp_server_cantera/: __init__.py  schema.py  server.py
tests/: __init__.py  test_package.py  test_tools.py
traffic-logger/data/: clones.csv  paths.csv  referrers.csv  views.csv
